[package]
name = "codes"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = "1.7.2"
env_logger = "0.11.5"
http = "1.1.0"
log = "0.4.22"
pingora-core = "0.3.0"
pingora-http = "0.3.0"
pingora-load-balancing = "0.3.0"
pingora-proxy = "0.3.0"
pingora-timeout = "0.3.0"
tokio = { version = "1.40.0", features = ["full"] }
